Atualizando swagger
